# wearlibrary

./: CMakeLists.txt  README.md  math.hpp  split.hpp  stringenum.hpp
wear/: binary.hpp  file.hpp  macros.hpp  matrix.hpp  utf8.hpp
